# PicCompress

./: CMakeLists.txt  README.md  new.docx
PicCompress/: Main.cpp
Src/: File.cpp  File.h  FuzzyControl.cpp  Image.cpp  Image.h  PicZoom.cpp  PicZoom.h
